--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,15 @@
         <title>Statera</title>
 
         <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Viga&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="styles.css"></link>
-    </head>
+        <link rel="stylesheet" href="/dist/styles.css"></link>
+    <script defer src="/dist/js/bundleName.js"></script></head>
     <body class="disable-selection">
         <script src="../src/app.ts"></script>
+        <script src="../src/Boss.ts"></script>
+        <script src="../src/Enemy.ts"></script>
+        <script src="../src/TPSController.ts"></script>
+        <script src="../src/Mutant.ts"></script>
+        <script src="../src/PlayerHealth.ts"></script>
+        <script src="../src/Round.ts"></script>
     </body>
 </html>
