--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Agonia</title>
+        <title>Statera</title>
 
         <link href="https://fonts.googleapis.com/css2?family=Ceviche+One&family=Viga&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="/styles.css"></link>
-    <script defer src="../dist/js/bundleName.js"></script></head>
+        <link rel="stylesheet" href="styles.css"></link>
+    </head>
     <body class="disable-selection">
+        <script src="../src/app.ts"></script>
     </body>
 </html>
